[gd_scene load_steps=2 format=3 uid="uid://4ppn1sy3ajhi"]

[ext_resource type="Script" uid="uid://cdcqyvscmpuur" path="res://scenes/explore/explore_menu.gd" id="1_lr0w2"]

[node name="CenterContainer" type="CenterContainer"]
script = ExtResource("1_lr0w2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="navForage" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[forage]"
fit_content = true
autowrap_mode = 0

[node name="navTravel" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[travel]"
fit_content = true
autowrap_mode = 0

[node name="navWait" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[wait]"
fit_content = true
autowrap_mode = 0
